# brazillian_e-commerce

./: main.py  pyproject.toml
sql/: order_items_clean.sql  order_payments_clean.sql  orders_clean.sql  sellers_clean.sql
sql/analysis/: avg_approval_time_by_payment_type.sql  avg_delivery_time_by_day_of_the_week.sql  avg_delivery_time_by_month.sql  avg_delivery_time_by_weight.sql  avg_fulfillment_duration_by_seller.sql  delivery_time_by_state.sql  order_weight.sql  transit_time_with_distance.sql
sql/cleaning/: customers_clean.sql  geolocation_clean.sql  order_reviews_clean.sql  product_category_name_translation_clean.sql  products_clean.sql
sql/indexes/: init_indexes.sql
sql/machine_learning_features/: ml_features.sql
sql/transformation/: customer_seller_geolocation.sql
src/brazillian_e-commerce/: database.py
src/brazillian_e_commerce/: analyse_data.py  clean_data.py  download_e_commerce_data.py  haversine_formula.py  indexes.py  ml_features.py  model_training_xgboost.py  run_sql.py  transform_data.py
