[project]
name = "brazillian-e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarak Gupta Drebes",email = "tarak.guptadrebes@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
