[project]
name = "brazillian_e_commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarak Gupta Drebes",email = "tarak.guptadrebes@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "kagglehub (>=1.0.1,<2.0.0)",
    "plotly (>=6.8.0,<7.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
